--- a/_includes/sidebar-nav-links.html
+++ b/_includes/sidebar-nav-links.html
@@ -8,7 +8,7 @@
 
 <nav id="sidebar-nav-links">
   <a class="page-link {% if page.url == "/" %} active{% endif %}"
-href="{{ "/" | relative_url }}>Home</a>
+href="/">Home</a>
   {% if site.sidebar_blog_link %}
     <a class="page-link {% if page.url == site.sidebar_blog_link %} active{% endif %}"
 	href="{{ site.sidebar_blog_link | relative_url }}">Blog</a>
