--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -1,2 +1,2 @@
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/favicon.gif" | relative_url }}" />
-<link rel="shortcut icon" href="{{ "/favicon.gif" | relative_url}}" />
+<link rel="icon" type="image/svg+xml" href="{{ "/favicon.svg" | relative_url }}">
+<link rel="icon" type="image/png" href="{{ "/favicon.png" | relative_url}}" />
