--- a/_sass/hydeout/_images.scss
+++ b/_sass/hydeout/_images.scss
@@ -52,6 +52,9 @@
 		75% {
 			border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;
 		}
+    100% {
+			border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+		}
 	}
 
 .details {
